fixed events row so event name doens't overlap buy tcket link in event module on homepage

--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -209,7 +209,7 @@ footer a {
   bottom: 0;
   width: 20%;
   padding: 0 30px;
-  height: 232px;
+  height: 292px;  
 }
 
 .event-inner p {
@@ -482,9 +482,7 @@ footer a img {
     width: 33%;
     display: table;
   }
-  .event-overlay {
-    display: none;
-  }
+  
   .event-inner {
     position: static;
     height: 500px;
